2009-04-07 16:42  adburton

	* src/: Makefile.am, gmameui-gamelist-view.c, gmameui-sidebar.c,
	  gmameui-sidebar.h, gmameui.h, gui.c, gui.h, po/POTFILES.in:
	  Move code for RHS ROM sidebar to separate files

2009-04-07 08:23  adburton

	* src/: gmameui.c, mame-exec-list.c: Fix segfault on startup if
	  no .gmameui directory found (SF Bug 2738775)

2009-04-07 00:10  adburton

	* src/: directories.c, directories.h, gui_prefs.c,
	  mame-exec.c, mame-exec-list.c: Fix crash when removing
	  last MAME executable directory in Directories window, prompt
	  user if no executable or ROM path is set when closing the 
	  Directories window

2009-04-04 13:10  adburton

	* src/: gmameui-gamelist-view.c, interface.c, gmameui.c, gmameui.h
	  filters_list.c, gui_prefs.c, gui_prefs.h, data/main_gui.glade:
	  Add new filter group Status and filters Correct and Best
	  Best Available, add ROM availability filtering buttons
	  (SF Feature Request 2474989)

2009-03-31 22:39  adburton

	* po/: gmameui.pot, POTFILES.in: Update pot template and list of
	  source files

2009-03-29 16:08  adburton

	* configure.ac, NEWS: Tagged for new release

2009-02-01 17:53  adburton

	* data/options_legacy.glade: Add Glade file for legacy options

2009-02-01 17:46  adburton

	* src/: callbacks.c, options.c, options.h, properties.c,
	  properties.h: Removed redundant files

2009-02-01 17:40  adburton

	* src/: Makefile.am, callbacks.c, gmameui.c, gui.h,
	  mame_options_legacy.c, mame_options_legacy.h,
	  mame_options_legacy_dialog.c, options_string.c, options_string.h,
	  mame_options_legacy_dialog.h: Replace old XMAME dialog generation
	  with Glade-generated dialog and code to save options, consolidate
	  command line string generation

2008-12-11 00:21  adburton

	* data/rom_info.glade, src/Makefile.am, src/callbacks.c,
	  src/gmameui-rominfo-dlg.c, src/gmameui-rominfo-dlg.h,
	  src/properties.c, src/properties.h: Convert RomInfo dialog to
	  GtkObject, move to separate file
